bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: '{' expected but '(' found.
  (aSmile,bSmile) match() {
                       ^